--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>Next tetramino</div>
         <div class="nextTetramino"></div>
       </div>
-      <div class="tetris"></div>
+      <div class="game"></div>
       <div class="state">
         <div class="interface">
           <div>SCORE</div>
@@ -43,7 +43,7 @@
               <li><a>Height</a> <input id="height" value="20" /></li>
               <li><a>Node px size</a> <input id="pxSize" value="40" /></li>
             </ol>
-            <div class="btn">apply</div>
+            <div class="apply btn">apply</div>
           </li>
         </ol>
       </nav>
