--- a/index.html
+++ b/index.html
@@ -42,26 +42,15 @@
               <li><a>Width</a> <input id="width" value="10" /></li>
               <li><a>Height</a> <input id="height" value="20" /></li>
               <li><a>Node px size</a> <input id="pxSize" value="40" /></li>
+              <li><a>Initial drop speed</a> <input id="speed" value="1" /></li>
             </ol>
             <div class="apply btn">apply</div>
           </li>
         </ol>
       </nav>
-      <!-- <div class="width">
-        <div>Screen width</div>
-        <input id="width" type="text" />
-      </div>
-      <div class="height">
-        <div>Screen height</div>
-        <input id="height" type="text" />
-      </div>
-      <div class="pxSize">
-        <div>Node pixel size</div>
-        <input id="pxSize" type="text" />
-      </div>
-      <button id="apply">apply</button> -->
     </div>
   </body>
-  <script src="./js/game.js"></script>
+  <script src="./js/gameUtils.js"></script>
+  <script src="./js/startGame.js"></script>
   <script src="./js/index.js"></script>
 </html>
