add-count-down-timer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <div>SCORE</div>
           <div class="score">0</div>
         </div>
+        <div class="interface">
+          <div>TIME</div>
+          <div class="time">0</div>
+        </div>
         <div class="interface control">
           <div class="pause"></div>
           <div class="restart"></div>
